AB#1159 Move from Dropwizard to Spring Boot
Remove Dropwizard metrics; they were not really used.
Replace Dropwizard with Spring Boot.
Replace Dropwizard commands with Spring Shell commands.
Check for logout confirmation button when running the client-side tests.